# rca-sistematizador

./: .env.example  .gitattributes  .gitignore  Modelfile  README.md  pyproject.toml  requirements.txt
config/: mapeo_organizacional.yaml  settings.yaml  taxonomia.yaml
prompts/: clasificar.txt  extraer_exigencias.txt
scripts/: setup.ps1
src/rca/: __init__.py  classify.py  cli.py  config.py  enrich.py  export.py  extract.py  ingest.py  llm.py  parse.py  schema.py  verify.py
tests/: test_parse.py  test_schema.py
